# AudibleLight

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  augmentation.html  backend.html  class_mappings.html  codecov.yml  core.html  download_data.html  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  events.html  example_generation.py  genindex.html  index.html  installation.html  microphones.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  synthesis.html
.doctrees/: augmentation.doctree  backend.doctree  class_mappings.doctree  core.doctree  download_data.doctree  environment.pickle  events.doctree  index.doctree  installation.doctree  microphones.doctree  synthesis.doctree
_autosummary/: audiblelight.ambience.Ambience.html  audiblelight.augmentation.Augmentation.html  audiblelight.augmentation.Bitcrush.html  audiblelight.augmentation.Chorus.html  audiblelight.augmentation.Clipping.html  audiblelight.augmentation.Compressor.html  audiblelight.augmentation.Deemphasis.html  audiblelight.augmentation.Delay.html  audiblelight.augmentation.Distortion.html  audiblelight.augmentation.EventAugmentation.html  audiblelight.augmentation.Fade.html  audiblelight.augmentation.GSMFullRateCompressor.html  audiblelight.augmentation.Gain.html  audiblelight.augmentation.HighShelfFilter.html  audiblelight.augmentation.HighpassFilter.html  audiblelight.augmentation.Invert.html  audiblelight.augmentation.Limiter.html  audiblelight.augmentation.LowShelfFilter.html  audiblelight.augmentation.LowpassFilter.html  audiblelight.augmentation.MP3Compressor.html  audiblelight.augmentation.MultibandEqualizer.html  audiblelight.augmentation.Phaser.html  (+41 more)
docs/: conf.py  (+7 more)
(+306 files in other folders)
